additional path routing updates

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
+<button class="btn btn-primary" routerLink="/">Home Page</button>
+<button class="btn btn-primary" routerLink="/questions/1">Question Page</button>
+<button class="btn btn-primary" routerLink="/results">Results Page</button>
+
 <router-outlet></router-outlet>
-<video autoplay muted loop id="myVideo">
-        <source src="bg.mp4" type="video/mp4">
-    </video>
