--- a/src/app/questions/questions.component.html
+++ b/src/app/questions/questions.component.html
@@ -1,3 +1,10 @@
+<div class="container">
+  <div class="row">
+    <div class="col">
+      <h1>Tally</h1>
+    </div>
+  </div>
+</div>
 <div class="video-background">
     <div class="video-foreground">
       <iframe src="https://www.youtube.com/embed/W0LHTWG-UmQ?controls=0&showinfo=0&mute=1&rel=0&autoplay=1&loop=1&playlist=W0LHTWG-UmQ" frameborder="0" allowfullscreen></iframe>
