--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,10 @@
 <div class="video-background">
     <div class="video-foreground">
-      <iframe src="https://www.youtube.com/embed/4DTO4uHRKqQ?controls=0&showinfo=0&mute=1&rel=0&autoplay=1&loop=1" frameborder="0" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/4DTO4uHRKqQ?controls=0&showinfo=0&mute=1&rel=0&autoplay=1&loop=1&playlist=4DTO4uHRKqQ"
+        frameborder="0" allowfullscreen></iframe>
     </div>
   </div>
 
-  <p>
+<p>
   questions works!
 </p>
