--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -34,3 +34,28 @@
 @media all and (max-width: 500px) {
 .vid-info .acronym { display: none; }
 }
+
+.title {
+  border-radius: 25px;
+  margin-top: 100px;
+  text-align: center;
+  font-family: 'Orbitron', sans-serif;
+  font-weight: bold;
+  background-color: bisque;
+  opacity: 0.7;
+  padding: 25px;
+}
+
+.button {
+  text-align: center;
+  margin: 100px;
+  padding: 20px;
+  font-weight: bold;
+  
+}
+
+a {
+  background-color: bisque;
+  opacity: 0.9;
+
+}
