--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,15 @@
 <div class="video-background">
-    <div class="video-foreground">
-      <iframe src="https://www.youtube.com/embed/4DTO4uHRKqQ?controls=0&showinfo=0&mute=1&rel=0&autoplay=1&loop=1&playlist=4DTO4uHRKqQ"
-        frameborder="0" allowfullscreen></iframe>
-    </div>
+  <div class="video-foreground">
+    <iframe src="https://www.youtube.com/embed/4DTO4uHRKqQ?controls=0&showinfo=0&mute=1&rel=0&autoplay=1&loop=1&playlist=4DTO4uHRKqQ"
+      frameborder="0" allowfullscreen></iframe>
   </div>
+</div>
+<div class="container">
+  <h1 class="title">What's Your EXTREME I.Q?</h1>
+  <div class="button">
+      <a href="/questions/questions.component" class="btn btn-outline-danger btn-lg" role="button">Begin Test</a>
 
-<p>
-  questions works!
-</p>
+  <!-- <button type=" button " class="btn btn-outline-danger btn-lg font-weight-bold">Begin Test</button> -->
+</div>
+
+</div>
