Change to home title and gifs for results page

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
   </div>
 </div>
 <div class="container">
-  <h1 class="title">What's Your EXTREME I.Q?</h1>
+  <h3 class="title">Find out your knowledge of the EXTREME!</h3>
   <div class="button">
       <a href="/questions/questions.component" class="btn btn-outline-danger btn-lg" role="button">Begin Test</a>
 
