--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-<button class="btn btn-primary" routerLink="/">Home Page</button>
-<button class="btn btn-primary" routerLink="/questions/1">Question Page</button>
-<button class="btn btn-primary" routerLink="/results">Results Page</button>
-
-<router-outlet></router-outlet>
+<div class="container">
+  <!-- <app-home></app-home> -->
+  <app-quiz></app-quiz>
+</div>
