--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
 <div class="container">
   <h1 class="title">What's Your EXTREME I.Q?</h1>
   <div class="button">
-      <a href="/questions/questions.component" class="btn btn-outline-danger btn-lg" role="button">Begin Test</a>
+      <a href="./quiz/quiz.component" class="btn btn-outline-danger btn-lg" role="button">Begin Test</a>
 
   <!-- <button type=" button " class="btn btn-outline-danger btn-lg font-weight-bold">Begin Test</button> -->
 </div>
